# Place

./: .gitignore  README.md  pyproject.toml
src/backend/: config.py  main.py  place.py
src/backend/api/: __init__.py  ws_manager.py
src/backend/database/: __init__.py  models.py
src/backend/html/: index.html
src/backend/html/static/css/: index.css
src/backend/html/static/js/: place.js
src/backend/oauth2/: __init__.py  models.py  util.py
src/backend/util/: log.py
src/tools/: img2txt.py  txt2img.py
